# rinha-backend-rust

./: .env  Cargo.toml  Dockerfile  Dockerfile.postgresql  README.md  docker-compose.yml  nginx.conf  postgresql.conf
src/: main.rs  services.rs  structs.rs  utils.rs
