[package]
name = "rinha-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix = "0.13.1"
actix-web = "4.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
rayon = "1.8.0"
chrono = "0.4.31"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15.0"